# PageEdit

./: .appveyor.yml  .gitignore  .travis.yml  AppEventFilter.cpp  AppEventFilter.h  AppearanceWidget.cpp  AppearanceWidget.h  CMakeLists.txt  CMakeLists5.txt  CMakeLists6.txt  ChangeLog.txt  ClassInfo.cpp  ClassInfo.h  ClipEditor.cpp  ClipEditor.h  ClipEditor.ui  ClipEditorModel.cpp  ClipEditorModel.h  ClipEditorTreeView.cpp  ClipEditorTreeView.h  ClipsWindow.cpp  ClipsWindow.h  ElementIndex.h  FocusSelectLineEdit.cpp  FocusSelectLineEdit.h  GeneralSettings.cpp  GeneralSettings.h  GumboInterface.cpp  GumboInterface.h  HTMLEncodingResolver.cpp  HTMLEncodingResolver.h  Inspector.cpp  Inspector.h  LanguageWidget.cpp  LanguageWidget.h  MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h  Makefile  (+65 more)
.github/workflows/: AppRun  appimg_cleanup.py  build-appimage.yml  build_appimage2.yml  build_pageedit_appimage.sh  checkqt5.yml  create_tag.yml  linux-build.yml  mac-build.yml  mac_arm64-build.yml  make_blog_post.yml  make_post.py  reset-lin-caches.txt  reset-mac-caches.txt  reset-mac_arm64-caches.txt  reset-win-caches.txt  win-build.yml
ci_scripts/: gddeploy.py  macgddeploy.py  newgddeploy.py  rpath_adjust.sh
ci_scripts/winget/: Sigil-Ebook.PageEdit.installer.yaml  Sigil-Ebook.PageEdit.locale.en-US.yaml  Sigil-Ebook.PageEdit.yaml  build.ps1
dark/: mac_dark_scrollbar.css  win-dark-style.qss  win_dark_scrollbar.css
examples/: CMakeLists.txt  clip_entries.ini  find_links.cc  get_title.c  prettyprint.cc  well_formed.cc
gumbo_subtree/: .gitignore  .travis.yml  CMakeLists.txt  README.md  autogen.sh
gumbo_subtree/examples/: CMakeLists.txt  serialize.cc
gumbo_subtree/python/gumbo/: bs4_adapter_test.py  gumboc.py  gumboc_tags.py  gumboc_test.py  soup_adapter.py
gumbo_subtree/src/: CMakeLists.txt
gumbo_subtree/tests/: CMakeLists.txt  parser.cc  string_buffer.cc  test_utils.cc  tokenizer.cc
gumbo_subtree/visualc/include/: gumbo_windll.def
icons/: PageEdit.icns  icons.qrc  icons.qrc~  xhtml.icns
installer/: PageEdit.iss
javascript/: javascript.qrc
platform/linux/bash/: pageedit-sh_install
platform/linux/freedesktop/: pageedit-appimage.desktop  pageedit.desktop
platform/mac/: MacOSXBundleInfo.plist
python/gumbo/: bs4_adapter.py  html5lib_adapter.py  html5lib_adapter_test.py
src/: CMakeLists.txt  foreign_attrs.gperf  tag.in
tests/: CMakeLists.txt  tokenizer.cc
ts/: base.ts  base_pageedit.ts  pageedit_ar.ts  pageedit_az.ts  pageedit_ca.ts  pageedit_cs.ts  pageedit_da_DK.ts  pageedit_de.ts  pageedit_en.ts  pageedit_es.ts  pageedit_fi.ts  pageedit_fr.ts  pageedit_gl.ts  pageedit_hu_HU.ts  pageedit_it.ts  pageedit_ja.ts  pageedit_ko.ts  pageedit_nl.ts  pageedit_pl.ts  pageedit_pt_BR.ts  pageedit_ru.ts  pageedit_sr.ts  pageedit_sv.ts  pageedit_th.ts  pageedit_tr.ts  pageedit_tr_TR.ts  pageedit_uk.ts  pageedit_uk_UA.ts  pageedit_zh.ts  pageedit_zh_CN.ts  pageedit_zh_TW.ts
